# C_impl_data_structure

./: .gitignore  CMakeLists.txt  Makefile  README-linear.md  README.md  main_prim
impl/: azvs_base.c  azvs_linear.c  azvs_linked.c  azvs_list.c  azvs_queue.c  azvs_stack.c
impl/array/: azvs_array.c
impl/base/: __base_log.c  __base_memory.c
include/: azvs_base.h  azvs_data_structure.h  azvs_linear.h  azvs_linked.h  azvs_list.h  azvs_queue.h  azvs_stack.h
include/array/: azvs_array.h
include/stack/: azvs_stack_array.h
src/: azvs_base.c  azvs_list.c  azvs_queue.c  azvs_stack.c
